5.7.0 base
mkdir temp
cd temp
git clone
ssh://funatake@192.168.0.1:2722/mnt/data/funatake/private/Data/source/git_repos/jEdit/jEdit.git
cd jEdit

jEditオリジナルのgitリポジトリで以下のコマンド
git archive v5.7.0 | tar -x -C ../temp/jEdit/